# quantumlauncher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  quantum_launcher.spec
.github/workflows/: release.yml
assets/binaries/: README.md
assets/binaries/macos_shortcut/: build.sh  shortcut  shortcut.c
assets/freedesktop/: Info.plist  quantum-launcher.metainfo.xml
assets/freedesktop/debian/: control
changelogs/: 0.5.1.md  unreleased.md
crates/ezshortcut/: Cargo.toml
crates/ezshortcut/src/: lib.rs
crates/ezshortcut/src/os/: macos.rs
crates/ezshortcut/src/os/windows/: comguard.rs  mod.rs
crates/ql_core/: Cargo.toml
crates/ql_core/src/: clean.rs  error.rs  file_utils.rs  hard_linking.rs  lib.rs  read_log.rs  request.rs  structs.rs  symbolic_link.rs  urlcache.rs
crates/ql_core/src/jarmod/: json.rs  mod.rs
crates/ql_core/src/json/: asset_index.rs  forge.rs  instance_config.rs  manifest.rs  mod.rs  optifine.rs  version.rs
crates/ql_core/src/print/: mod.rs
crates/ql_instances/: Cargo.toml
crates/ql_instances/src/: launcher_update_detector.rs  lib.rs
crates/ql_instances/src/auth/: authlib.rs  mod.rs  ms.rs
crates/ql_instances/src/auth/yggdrasil/: mod.rs  oauth.rs
crates/ql_instances/src/download/: downloader.rs  libraries.rs  mod.rs
crates/ql_instances/src/instance/: cloning.rs  list_versions.rs  migrate.rs  mod.rs
crates/ql_instances/src/instance/launch/: error.rs  launcher.rs  mod.rs
crates/ql_java_handler/: Cargo.toml
crates/ql_java_handler/src/: alternate_java.rs  compression.rs  lib.rs
crates/ql_mod_manager/: Cargo.toml
crates/ql_mod_manager/src/loaders/: mod.rs  neoforge.rs  optifine.rs  paper.rs
crates/ql_mod_manager/src/loaders/fabric/: error.rs  make_launch_jar.rs  mod.rs  uninstall.rs  version_list.rs
crates/ql_mod_manager/src/loaders/forge/: error.rs  mod.rs  server.rs  uninstall.rs
crates/ql_mod_manager/src/presets/: mod.rs
crates/ql_mod_manager/src/store/: add_file.rs  delete.rs  error.rs  export.rs  id.rs  image.rs  local_json.rs  mod.rs  recommended.rs  toggle.rs  types.rs  update.rs
crates/ql_mod_manager/src/store/curseforge/: categories.rs  download.rs  mod.rs
crates/ql_mod_manager/src/store/modpack/: curseforge.rs  error.rs  mod.rs  modrinth.rs
crates/ql_mod_manager/src/store/modrinth/: download.rs  info.rs  mod.rs  search.rs
crates/ql_packager/: Cargo.toml
crates/ql_packager/src/: export.rs  import.rs  lib.rs  multimc.rs
crates/ql_servers/: Cargo.toml
crates/ql_servers/src/: create.rs  lib.rs  run.rs
quantum_launcher/: Cargo.toml
quantum_launcher/src/: launcher_update.rs  main.rs  mclog_upload.rs  mods_store.rs  tick.rs  update.rs  view.rs
quantum_launcher/src/cli/: account.rs  command.rs  mod.rs
quantum_launcher/src/config/: mod.rs
quantum_launcher/src/config/sidebar/: drag_drop.rs  mod.rs  types.rs
quantum_launcher/src/menu_renderer/: create.rs  edit_instance.rs  launch.rs  log.rs  login.rs  mod.rs  settings.rs  shortcuts.rs
quantum_launcher/src/menu_renderer/mods/: description.rs  export_mods.rs  install_loader.rs  instance_package.rs  jarmods.rs  mod.rs  mods_manage.rs  mods_store.rs  presets.rs
quantum_launcher/src/menu_renderer/onboarding/: changelog.rs  mod.rs  welcome.rs
quantum_launcher/src/menu_renderer/settings/: mod.rs  tab_about.rs  tab_game.rs  tab_ui.rs
quantum_launcher/src/menu_renderer/sidebar/: drop_recv.rs  mod.rs
quantum_launcher/src/message_handler/: arrow_keys.rs  iced_event.rs  mod.rs
quantum_launcher/src/message_update/: accounts.rs  create_instance.rs  edit_instance.rs  launch.rs  manage_mods.rs  mod.rs  mod_store.rs  package.rs  presets.rs  recommended.rs  shortcuts.rs
quantum_launcher/src/state/: images.rs  menu.rs  message.rs  mod.rs
quantum_launcher/src/stylesheet/: styles.rs
scripts/: clippy_pedantic.sh  msrv_build.sh
tests/: Cargo.toml
tests/src/: launch.rs  main.rs
tests/src/search/: macos.rs  windows.rs
