[workspace]
members = [
    "crates/ql_core",
    "crates/ql_instances",
    "crates/ql_mod_manager",
    "crates/ql_servers",
    "crates/ql_packager",
    # Binaries
    "quantum_launcher",
    "tests",
    # Utility Libraries
    "crates/ql_java_handler",
    "crates/ezshortcut",
]
default-members = ["quantum_launcher"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
semver = "1"
dirs = "6"

reqwest = { version = "0.13.*", features = ["json", "stream", "query", "form"] }

tokio = { version = "1", features = ["fs", "macros", "process", "rt", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
cfg-if = "1"

owo-colors = "4"
chrono = "0.4"
thiserror = "2"
rfd = { version = "0.16.*", default-features = false, features = [
    "xdg-portal",
    "wayland",
    "tokio"
] }
clap = { version = "4", features = ["help", "derive"] }

zip = { version = "=7.2", default-features = false, features = ["deflate"] } # MSRV

walkdir = "2.3"
image = { version = "0.24", default-features = false, features = [
    # Web formats are enough
    #"avif",
    "gif",
    "ico",
    "jpeg",
    "png",
    "webp",
] }
tempfile = "3"
regex = "1"

# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release-test]
inherits = "release"
opt-level = "s"

[profile.release-dbg]
inherits = "release"
debug = true

[profile.release-ql]
inherits = "release"
opt-level = "s"
lto = "fat"
strip = "symbols"
panic = "abort"
