[package]
name = "quantum_launcher"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"

authors = ["Mrmayman <navneetkrishna22@gmail.com>"]
description = "A simple, powerful Minecraft Launcher"
keywords = ["minecraft", "mc", "launcher", "game-tools", "modding"]
license = "GPL-3.0-only"
homepage = "https://mrmayman.github.io/quantumlauncher"
repository = "https://github.com/Mrmayman/quantumlauncher/"
readme = "../README.md"
categories = ["games"]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "3"

[features]
default = ["wgpu", "tiny_skia", "auto_update"]
wgpu = ["iced/wgpu"]
tiny_skia = ["iced/tiny-skia"]
# checking for updates, autoupdater
auto_update = []

debug = ["iced/debug"]
simulate_linux_arm64 = ["ql_instances/simulate_linux_arm64"]
simulate_linux_arm32 = ["ql_instances/simulate_linux_arm32"]
simulate_macos_arm64 = ["ql_instances/simulate_macos_arm64"]

[dependencies]
ql_instances.path = "../crates/ql_instances"
ql_mod_manager.path = "../crates/ql_mod_manager"
ql_core.path = "../crates/ql_core"
ql_servers.path = "../crates/ql_servers"
ql_packager.path = "../crates/ql_packager"
ezshortcut.path = "../crates/ezshortcut"

# For the GUI
iced = { version = "0.13", default-features = false, features = [
    "tokio",
    "image",
    "svg",
    "lazy",
    "advanced",
] }
# The HTML/Markdown renderer
frostmark = { version = "0.2", default-features = false, features = ["markdown"] }
# For table widget, I don't need this
# tabular = { git = "https://github.com/Mrmayman/tabular.git" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
cfg-if.workspace = true
semver.workspace = true

# Terminal
owo-colors.workspace = true
clap.workspace = true
terminal_size = "0.4"

# OS APIs
notify = "8"
open = "5.3.2"
dark-light = "2"
dirs.workspace = true

paste = "1" # icon widget macro
rfd.workspace = true # file picker
constcat = "0.6"
rand = "0.10"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = { version = "4", default-features = false, features = ["z-with-tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.*", features = ["Win32_System_Console"] }
