[package]
name = "ezshortcut"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
cfg-if.workspace = true
tokio.workspace = true
dirs.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.*", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
] }
