[package]
name = "ql_instances"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"

[features]
default = []
simulate_linux_arm64 = ["ql_core/simulate_linux_arm64", "ql_java_handler/simulate_linux_arm64"]
simulate_linux_arm32 = ["ql_core/simulate_linux_arm32", "ql_java_handler/simulate_linux_arm32"]
simulate_macos_arm64 = ["ql_core/simulate_macos_arm64", "ql_java_handler/simulate_macos_arm64"]

[dependencies]
ql_core.path = "../ql_core"
ql_java_handler.path = "../ql_java_handler"

chrono.workspace = true
semver.workspace = true
zip.workspace = true
cfg-if.workspace = true

reqwest.workspace = true
tokio.workspace = true

serde.workspace = true
serde_json.workspace = true

owo-colors.workspace = true
thiserror.workspace = true
indicatif = "0.18.*"

urlencoding = "2"
fs_extra = "1.3.0"
walkdir = "2.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "linux")))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
