[package]
name = "ql_java_handler"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"

[features]
default = []
simulate_linux_arm64 = []
simulate_macos_arm64 = []
simulate_linux_arm32 = []

[dependencies]
ql_core.path = "../ql_core"

thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
owo-colors.workspace = true
cfg-if.workspace = true

zip.workspace = true
lzma-rs = "0.3"
