[package]
name = "ql_mod_manager"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"

[dependencies]
ql_core.path = "../ql_core"
ql_java_handler.path = "../ql_java_handler"

reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true

zip.workspace = true

tokio.workspace = true
futures.workspace = true

owo-colors.workspace = true
thiserror.workspace = true

chrono.workspace = true
regex.workspace = true
indexmap = "2"
