[package]
name = "ql_servers"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"

[dependencies]
ql_core.path = "../ql_core"
ql_java_handler.path = "../ql_java_handler"

serde_json.workspace = true
tokio.workspace = true
owo-colors.workspace = true
zip.workspace = true
thiserror.workspace = true
